# fd_f

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: fdf.h  keys.h  vector_math.h
libft/: Makefile  get_next_line.c  libft.h
maps/: pyramid  test1  test1copy  test2
src/: camera.c  check_input.c  color.c  create_image.c  create_model.c  debug_tools.c  destroy_height.c  draw.c  free_tools.c  hex_to_dec.c  i_init.c  main.c  matrix_math.c  mlx.c  model_tools.c  new_vec.c  rotate.c  rotate_Y.c  rotate_matrix.c  rotate_x.c  rotate_y.c  rotate_z.c  vec_tools.c  vector_math.c  zoom.c
